Question1 created. Switch used.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
         android:hint="@string/Login_hint_password"
         android:inputType="textPassword"/>
     <Button
+        android:id="@+id/Login_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
