Action given to Back and Next button of Question1Activity.

--- a/app/src/main/res/layout/activity_question1.xml
+++ b/app/src/main/res/layout/activity_question1.xml
@@ -48,6 +48,7 @@
         android:textColor="@color/colorWhiteText"
         android:background="@color/colorTransparentBtn"/>
     <Button
+        android:id="@+id/Button_next1"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
