Added one more question, Question2Activity.java

--- a/app/src/main/res/layout/activity_question2.xml
+++ b/app/src/main/res/layout/activity_question2.xml
@@ -11,4 +11,55 @@
     android:background="@drawable/marshall"
     tools:context="com.example.sriram.marshallgoldsmithapp.Question2Activity">
 
+    <TextView
+        android:id="@+id/Header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Question"
+        android:textColor="@color/colorWhiteText"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textSize="30sp"
+        android:background="@color/colorLogin"/>
+    <TextView
+        android:id="@+id/ques2"
+        android:layout_below="@id/Header"
+        android:padding="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Have you spent some time with your Family?"
+        android:textColor="@color/colorWhiteText"
+        android:textSize="25sp"
+        android:fontFamily="sans-serif-smallcaps"/>
+
+    <Switch
+        android:id="@+id/Switch_Ques_2"
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#44ffffff"
+        android:layout_marginTop="46dp"
+        android:layout_below="@+id/ques2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Select YES/NO"
+        android:textColor="@color/colorWhiteText"/>
+    <Button
+        android:id="@+id/Button_back2"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_alignParentBottom="true"
+        android:text="Back"
+        android:textColor="@color/colorWhiteText"
+        android:background="@color/colorTransparentBtn"/>
+    <Button
+        android:id="@+id/Button_next2"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:text="Next"
+        android:textColor="@color/colorWhiteText"
+        android:background="@color/colorTransparentBtn"/>
 </RelativeLayout>
