--- a/app/src/main/res/layout/activity_question2.xml
+++ b/app/src/main/res/layout/activity_question2.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_question2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/marshall"
     tools:context="com.example.sriram.marshallgoldsmithapp.Question2Activity">
 
@@ -62,4 +58,28 @@
         android:text="Next"
         android:textColor="@color/colorWhiteText"
         android:background="@color/colorTransparentBtn"/>
+
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorTransparentBtn"
+        android:layout_below="@+id/Switch_Ques_2"
+        android:layout_alignLeft="@+id/Button_back2"
+        android:layout_alignStart="@+id/Button_back2"
+        android:layout_marginTop="23dp"
+        android:padding="5dp"
+        android:id="@+id/seekBar1"
+        android:layout_alignRight="@+id/Button_next2"
+        android:layout_alignEnd="@+id/Button_next2"
+        android:visibility="gone" />
+    <TextView
+        android:id="@+id/seek_txt"
+        android:layout_below="@id/seekBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="30sp"
+        android:textColor="@color/colorWhiteText"
+        android:visibility="gone"/>
+
 </RelativeLayout>
