--- a/app/src/main/res/layout/activity_question3.xml
+++ b/app/src/main/res/layout/activity_question3.xml
@@ -4,10 +4,13 @@
     android:id="@+id/activity_question3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/marshall"
     tools:context="com.example.sriram.marshallgoldsmithapp.Question3Activity">
-
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:padding="25dp"
+        android:textColor="@color/colorWhiteText"/>
 </RelativeLayout>
