--- a/app/src/main/res/menu/menusec.xml
+++ b/app/src/main/res/menu/menusec.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item android:id="@+id/about"
         android:title="About Marshall Goldsmith" />
-    <item android:id="@+id/Signin_menu"
-        android:title="@string/Login" />
-    <item android:id="@+id/Signup_menu"
-        android:title="@string/Signup" />
+    <item android:id="@+id/Home"
+        android:title="Home" />
     <item android:id="@+id/Exit"
         android:title="Exit" />
 </menu>
